test/extern/ferguson/externblock/two-modules2-error2.good
two-modules2-error2.chpl:1: In module 'OuterModule':
two-modules2-error2.chpl:13: error: cannot find 'y' in module 'A'
two-modules2-error2.chpl:16: error: cannot find 'y' in module 'A'
